# clause-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/compare/: ndb-26wa.xml
notebooks/: prototype.ipynb
rules/: eu-ai-act.REVIEW.md  eu-ai-act.json  ndb.REVIEW.md  ndb.json
scripts/: add_eu_scenarios.py  build_notebook.py  download_eu_ai_act.py  prototype_verify.py
src/: api.py  compare.py  engine.py  extract.py  ingest.py  pipeline.py  provenance.py  schema.py
tests/: test_api.py  test_compare.py  test_engine.py  test_extract.py  test_ingest.py  test_pipeline_config.py  test_provenance.py  test_schema.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  screenshot.mjs  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  types.ts
web/src/components/: ComparePane.vue  DomainSwitcher.vue  NdbFactorDisplay.vue  ResultsSummary.vue  RuleList.vue  SandboxPane.vue  ScenarioBar.vue
web/tests/e2e/: demo-compare.spec.ts  demo-eu.spec.ts  demo-ndb.spec.ts
