[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clause-kit"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "pydantic>=2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "json-logic>=0.6.2",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
